Fixed minor CSS error on timesheet page, fixed setup to use postgres
- CSS error causing misaligned signatures on timesheets fixed
- Dev stack did not utilize postgres container, missing database setup file caused django to use sqlite
- Imported settings file from skyline, setup now correctly uses postgres
- fixed last shift in example shift file to have a clock out time, otherwise shifts are generated until current date

--- a/time_system/clocker/static/css/main_page.css
+++ b/time_system/clocker/static/css/main_page.css
@@ -258,3 +258,7 @@ td {
     padding-left: 5px;
     padding-right: 5px;
 }
+
+#signed-label{
+    margin-top: -1em;
+}
